--- a/1_Begginer/8_Strings2/8_Strings2/8_Strings2.csproj
+++ b/1_Begginer/8_Strings2/8_Strings2/8_Strings2.csproj
@@ -35,7 +35,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringUtility.cs" />
-    <Compile Include="StringBuilder.cs" />
+    <Compile Include="SBOperations.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
