--- a/1_Begginer/9_Prodefural/9_Prodefural/Procedurals.csproj
+++ b/1_Begginer/9_Prodefural/9_Prodefural/Procedurals.csproj
@@ -37,6 +37,7 @@
     <Compile Include="ConsecutiveNumber.cs" />
     <Compile Include="Ex2.cs" />
     <Compile Include="Ex1.cs" />
+    <Compile Include="Ex3.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
