--- a/1_Begginer/9_Prodefural/9_Prodefural/Procedurals.csproj
+++ b/1_Begginer/9_Prodefural/9_Prodefural/Procedurals.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Ex1.cs" />
     <Compile Include="Ex3.cs" />
     <Compile Include="Ex4.cs" />
+    <Compile Include="Ex5.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
