--- a/2_Intermediate/1_Classes A/ClassesA/ClassesA/ClassesA.csproj
+++ b/2_Intermediate/1_Classes A/ClassesA/ClassesA/ClassesA.csproj
@@ -35,6 +35,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Customer.cs" />
+    <Compile Include="Order.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
