--- a/2_Intermediate/2_Methods/Methods_1/Methods_1/Methods_1.csproj
+++ b/2_Intermediate/2_Methods/Methods_1/Methods_1/Methods_1.csproj
@@ -34,6 +34,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Calculator.cs" />
+    <Compile Include="Point.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
