--- a/2_Intermediate/5_Properties/Props/Props/Props.csproj
+++ b/2_Intermediate/5_Properties/Props/Props/Props.csproj
@@ -30,10 +30,17 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="geschikt">
+      <HintPath>..\packages\ProductivityExtensions.2.0.24\lib\net45\geschikt.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Person2.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
