--- a/2_Intermediate/5_Properties/Props/Props/Props.csproj
+++ b/2_Intermediate/5_Properties/Props/Props/Props.csproj
@@ -38,6 +38,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Person2.cs" />
+    <Compile Include="Person1.cs" />
+    <Compile Include="Person.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
