--- a/2_Intermediate/9_Composition/Composition/Composition/Composition.csproj
+++ b/2_Intermediate/9_Composition/Composition/Composition/Composition.csproj
@@ -36,6 +36,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="DbMigrator.cs" />
+    <Compile Include="Installer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
