--- a/2_Intermediate/9_Composition/Composition2/Composition2/Composition2.csproj
+++ b/2_Intermediate/9_Composition/Composition2/Composition2/Composition2.csproj
@@ -34,6 +34,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Auto.cs" />
+    <Compile Include="CarB.cs" />
+    <Compile Include="CarA.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
