--- a/2_Intermediate/10_AccessModifiers/AccessModifiers/Amazon/Amazon.csproj
+++ b/2_Intermediate/10_AccessModifiers/AccessModifiers/Amazon/Amazon.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Customer.cs" />
+    <Compile Include="RateCalculator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
