--- a/2_Intermediate/13_AbstractClasses/AbstractClasses/AbstractClasses/AbstractClasses.csproj
+++ b/2_Intermediate/13_AbstractClasses/AbstractClasses/AbstractClasses/AbstractClasses.csproj
@@ -35,6 +35,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shape.cs" />
     <Compile Include="Circle.cs" />
+    <Compile Include="Rectangle.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
