--- a/2_Intermediate/15_Polymorphism/Exercices/Exercices/Exercices.csproj
+++ b/2_Intermediate/15_Polymorphism/Exercices/Exercices/Exercices.csproj
@@ -34,6 +34,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DbConnection.cs" />
+    <Compile Include="SqlConnection.cs" />
+    <Compile Include="OracleConnection.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
