--- a/2_Intermediate/15_Polymorphism/Exercices/Exercices/Exercices.csproj
+++ b/2_Intermediate/15_Polymorphism/Exercices/Exercices/Exercices.csproj
@@ -37,6 +37,7 @@
     <Compile Include="DbConnection.cs" />
     <Compile Include="SqlConnection.cs" />
     <Compile Include="OracleConnection.cs" />
+    <Compile Include="DbCommand.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
