--- a/2_Intermediate/16_Interfaces1/Interfaces_3/Interfaces_3/Interfaces_3.csproj
+++ b/2_Intermediate/16_Interfaces1/Interfaces_3/Interfaces_3/Interfaces_3.csproj
@@ -36,6 +36,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="DbMigrator.cs" />
+    <Compile Include="ConsoleLogger.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
