--- a/2_Intermediate/16_Interfaces1/Interfaces4/Interfaces4/Interfaces4.csproj
+++ b/2_Intermediate/16_Interfaces1/Interfaces4/Interfaces4/Interfaces4.csproj
@@ -36,6 +36,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IDraggable.cs" />
     <Compile Include="IDroppable.cs" />
+    <Compile Include="UiControl.cs" />
+    <Compile Include="TextBox.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
