--- a/2_Intermediate/16_Interfaces1/Interfaces5/Interfaces5/Interfaces5.csproj
+++ b/2_Intermediate/16_Interfaces1/Interfaces5/Interfaces5/Interfaces5.csproj
@@ -40,6 +40,8 @@
     <Compile Include="Video.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="INotificationChannel.cs" />
+    <Compile Include="MailNotificationChannel.cs" />
+    <Compile Include="SmsNotificationchannel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
