--- a/2_Intermediate/16_Interfaces1/Interfaces6/Exercices/Exercices/Exercices.csproj
+++ b/2_Intermediate/16_Interfaces1/Interfaces6/Exercices/Exercices/Exercices.csproj
@@ -34,6 +34,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkFlow.cs" />
+    <Compile Include="IActivity.cs" />
+    <Compile Include="WorkFlowEngine.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
