--- a/2_Intermediate/16_Interfaces1/Interfaces6/Exercices/Exercices/Exercices.csproj
+++ b/2_Intermediate/16_Interfaces1/Interfaces6/Exercices/Exercices/Exercices.csproj
@@ -37,6 +37,7 @@
     <Compile Include="WorkFlow.cs" />
     <Compile Include="IActivity.cs" />
     <Compile Include="WorkFlowEngine.cs" />
+    <Compile Include="WorkFlow2.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
