--- a/1_Begginer/Revisited/Revisited/Revisited.csproj
+++ b/1_Begginer/Revisited/Revisited/Revisited.csproj
@@ -34,6 +34,11 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ITask.cs" />
+    <Compile Include="Task1.cs" />
+    <Compile Include="Task2.cs" />
+    <Compile Include="IWorkFlow.cs" />
+    <Compile Include="Workflow.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
